<resources>
    <string name="app_name">My Application</string>
    <string name="number_1">Number 1</string>
    <string name="number_2">Number 2</string>
    <string name="ok">OK</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="go_to_calculator">Go to Calculator</string>
</resources>